# snowflake-tools

./: README.md  pyproject.toml
scripts/: reset-env.sh
src/snowflake_tools/: ArgumentParserTweaked.py  Snowflake.py  SnowflakeTable.py  Timer.py  __init__.py  analyze_table.py  generate_yml.py  get_ddl.py  mirror_permissions.py  snowflake_config.py
